<resources>


    <string name="no_internet_connection">No Internet connection</string>
    <string name="invalid_email">Email invalid</string>
    <string name="phone_not_valid">Phone Invalid</string>
    <string name="password_weak">Password weak</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="recently_added">Recently added</string>
    <string name="reqiured">Required</string>
    <string name="app_name">Hamaki Online</string>
    <string name="sign_in">Sign in</string>
    <string name="phone">Phone number</string>
    <string name="all_materials">All materials</string>
    <string name="title_home">Main</string>
    <string name="title_subjects">Materials</string>
    <string name="fav">Favorite</string>
    <string name="account">Profile</string>
    <string name="account_details">Account details</string>
    <string name="full_name">full name</string>
    <string name="study_group">Study group</string>
    <string name="Notifications">Notifications</string>
    <string name="download">Download</string>
    <string name="attachments">Attachments</string>
    <string name="something_error">Something error</string>
    <string name="update">Update</string>
    <string name="double_tab_exit">Please click BACK again to exit</string>
    <string name="default_notification_channel_id">Default channel</string>
    <string name="ok">ok</string>
    <string name="instructions">instructions</string>
    <string name="open">Open</string>
    <string name="if_you_try_to_record_you_will_be_removed_from_the_program">If you try to record, you will be removed from the program</string>

</resources>