<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:color="#085960"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_fav"
        android:color="#085960"
        android:icon="@drawable/ic_bookmark_unfill"
        android:title="@string/fav" />

    <item
        android:id="@+id/navigation_subjects"
        android:color="#085960"
        android:icon="@drawable/ic_subjects"
        android:title="@string/title_subjects" />


    <item
        android:id="@+id/navigation_account"
        android:color="#085960"
        android:icon="@drawable/ic_profile"
        android:title="@string/account" />

</menu>