<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    app:layout_behavior="@string/bottom_sheet_behavior"

    tools:context=".ui.fragment.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:scaleX="1.4"
                android:scaleY="1.8"
                android:src="@drawable/ic_home_bk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"

                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/shape_corner_8_white"


                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:queryHint="Type what you search for"
                app:defaultQueryHint="Type what you search for"

                app:layout_constraintEnd_toStartOf="@+id/notifications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="Type what you search for" />

            <ImageView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="6dp"
                android:src="@drawable/baseline_notifications_active_white_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/searchView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/searchView" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/welcome_back"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textClassName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/textAllSubjects"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/white"
                android:padding="4dp"
                android:text="@string/all_materials"
                android:textColor="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="@+id/textClassName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textClassName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAllSubjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textClassName"
                tools:listitem="@layout/item_all_subjects_home" />


            <TextView
                android:id="@+id/lastAdded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/recently_added"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/recyclerAllSubjects" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerLastAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/lastAdded"
                tools:listitem="@layout/item_last_added_home" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerLastArticles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/recyclerLastAdded"
                tools:listitem="@layout/item_articles" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

<!--    <include layout="@layout/dialog_reacts" />-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>